--- a/index.html
+++ b/index.html
@@ -17,64 +17,50 @@
         <!-- NAVIGATION -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-        <a class="navbar-brand" href="#">The Analysis of Discs: CDs</a>
+        <a class="navbar-brand" href="index.html">The Analysis of Discs: CDs</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Introduction</a>
+            <a class="nav-link" aria-current="page" href="index.html">Head</a>
             </li>
             <li class="nav-item">
-            <a class="nav-link" href="#">Inspiration</a>
+            <a class="nav-link" href="#Why">Why disks?</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Modern Application</a>
+                <a class="nav-link" href="#app">Modern Application</a>
             </li>
             </ul>
             </div>
         </div>
     </nav>
        <!-- HERO SECTION-->
-    <div class="px-4 py-5 mb-5 text-center bg-light">
+     <div class="head-intro">
      <h1 class="display-5 fw-bold">Analyzing the CD</h1>
         <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Once the dominating, revolutionary platform for storing data in a convenient way, we know consider the CD to be a fad of the past and have moved on to the next revolutionary invention. But why did we? What to? This website is the compilation of all these answers.</p>
+            <p class="lead mb-4">Once the dominating, revolutionary platform for storing data in a convenient way, we now consider the CD to be a fad of the past and have moved on to the next revolutionary invention. But why did we? What to? This website is the compilation of all these answers.</p>
             <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
             </div>
         </div>
-    </div>
-    <!-- THREE COLUMNS -->
-    <div class="container text-center">
-        <div class="row">
-            <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>Column</h5>
-            </div>
-            <div class="col px-5 my-3">
-                    <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                    <h5>Column</h5>
-            </div>
-            <div class="col px-5 my-3">
-                <img src="img/placeholder.png" class="img-fluid rounded-circle mb-3 feature">
-                <h5>Column</h5>
-            </div>
-        </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
+    </div class="When">
+    <h1 class="Introduction">
+        The When of CDs:  
+    </h1> 
+    <p class="when">CDs, the "Compact Disk", were invented in 1979 as a prototype by American physicist James Russell. Finalized in 1980, Phillips and Sony coordinated to produce CDs. The resulting design was a thin disk that could hold up to 80 minutes of music, compatable with CD players only. <br><br>
+    
+    In 1982, CDs were made public and took the world by storm. These disks quickly became the most efficient way of playing and storing music, replacing vinyl and cassette tapes. Unique features included:
+    </p>
+    <ul class="features">
+        <li>Can hold up to 80 minutes of songs, with a capacity of 700mb.</li>
+        <li>Cheap and avaiability high in public markets</li>
+        <li>Capable of storing multiple medias and information, such as games, videos, or software.</li>
+    </ul>
+    <aside">
+        <img src="adv&dis disk.webp" class="infographic">   
+    </aside>
+    <div class="James Russell"></div>
 
    </body>
 </html>
